fix: overflowmenu

--- a/src/styles/components/Badge.pcss
+++ b/src/styles/components/Badge.pcss
@@ -14,6 +14,7 @@
     border: 0.0625rem solid;
     border-radius: $component--radius-default;
     outline: 0;
+    white-space: nowrap;
 
     &:focus {
       border-color: $color--focus;
