--- a/src/styles/theme.pcss
+++ b/src/styles/theme.pcss
@@ -35,7 +35,7 @@ $color--border: $gray-150;
 /* -- Divider Colors -- */
 
 $color--divider-subtle: $gray-100;
-$color--divider-default: $gray-200;
+$color--divider-default: $gray-150;
 $color--divider-harsh: $gray-300;
 
 /* -- Font Colors -- */
